:zap: fix spacing and make adding games easier

--- a/src/app/contact/styles.module.css
+++ b/src/app/contact/styles.module.css
@@ -8,6 +8,23 @@
 @media screen and (max-width: 900px){
     .gridContact{
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
+}
+
+.contactHeader{
+    position: relative;
+}
+
+.contactHeader::after{
+    content: '';
+    background-image: url('/assets/DigitalSky/small_orange 1.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 20px;
+    width: 14vw;
+    height: 100%;
+    bottom: -50%;
 }
